--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,3 +34,8 @@ img{
   white-space: nowrap;
 }
 /*=== GLOBAL ===*/
+
+
+.database img{
+  box-shadow: 2px 10px 10px 2px rgba(57, 67, 70, 0.49);
+}
