--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@ html {
     box-sizing: inherit;
   }
 
+
 img{
     width: 100%;
     height: auto;
@@ -35,6 +36,30 @@ img{
 }
 /*=== GLOBAL ===*/
 
+body{
+  background-color: rgb(248, 249, 250);
+  margin-bottom: 60px; /* Margin bottom by footer height */
+}
+
+h1{
+  font-size: 1.2rem;
+} 
+
+.author{
+  padding-top: 0;
+  line-height: .8;
+  font-size: 0.83rem;
+}
+
+
+.info{
+  margin: 60px auto;
+}
+
+article{
+  padding-top:3.3333333333333335rem;
+  padding-bottom:3.3333333333333335rem;
+}
 
 .database img{
   box-shadow: 2px 10px 10px 2px rgba(57, 67, 70, 0.49);
