--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,15 +53,16 @@ h1{
 
 
 .info{
-  margin: 60px auto;
+  margin: 40px auto;
 }
 
 article{
-  padding-top:3.3333333333333335rem;
-  padding-bottom:3.3333333333333335rem;
+  padding-top:3rem;
+  padding-bottom:3rem;
 }
 
-.database img{
+.database img,
+.programming .article-1 img{
   box-shadow: 2px 10px 10px 2px rgba(57, 67, 70, 0.49);
 }
 
