--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ body{
   margin-bottom: 60px; /* Margin bottom by footer height */
 }
 
-h1{
+h1:not(.intro h1){
   font-size: 1.2rem;
 } 
 
@@ -57,12 +57,57 @@ h1{
 }
 
 article{
-  padding-top:3rem;
-  padding-bottom:3rem;
+  padding-top:3.3rem;
+  padding-bottom:3.3rem;
 }
 
+
+
+/*===ADDITIONAL===*/
 .database img,
 .programming .article-1 img{
   box-shadow: 2px 10px 10px 2px rgba(57, 67, 70, 0.49);
 }
 
+
+
+/*===INTRO PAGE===*/
+.about,
+.about-skills{
+  padding-top: 3.3rem;
+}
+
+
+
+
+/*===RELECTION PAGE===*/
+.reflection{
+  font-family:'Zen Kaku Gothic Antique', sans-serif;
+  font-weight: 500;
+}
+
+.growth{
+  background-color: pink;
+  padding: 3.3rem;
+}
+
+dl{
+  padding-top: 2rem;
+ }
+
+
+dd{
+  padding-bottom: 2rem;
+}
+
+
+
+.reflection .growth dt{
+  font-family: 'La Belle Aurore', cursive;
+  font-size: 3rem;
+}
+
+.reflection .wrap p{
+    font-size: .85rem;
+    padding-bottom: 3.3rem;
+}
