--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,12 @@ body{
   margin-bottom: 60px; /* Margin bottom by footer height */
 }
 
+li{
+  list-style: none;
+}
+ul{
+  padding: 0;
+}
 h1:not(.intro h1){
   font-size: 1.2rem;
 } 
@@ -56,6 +62,12 @@ h1:not(.intro h1){
   margin: 40px auto;
 }
 
+.feature{
+  padding-top: 3.3rem;
+}
+
+
+
 article{
   padding-top:3.3rem;
   padding-bottom:3.3rem;
@@ -65,9 +77,11 @@ article{
 
 /*===ADDITIONAL===*/
 .database img,
-.programming .article-1 img{
+.programming img,
+.typography img{
   box-shadow: 2px 10px 10px 2px rgba(57, 67, 70, 0.49);
 }
+
 
 
 
