--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,12 +44,16 @@ body{
 li{
   list-style: none;
 }
+
 ul{
   padding: 0;
 }
+
+
 h1:not(.intro h1){
   font-size: 1.2rem;
 } 
+
 
 .author{
   padding-top: 0;
@@ -57,6 +61,22 @@ h1:not(.intro h1){
   font-size: 0.83rem;
 }
 
+
+header nav ul li{
+  font-size: 1.4rem;
+}
+
+header nav li a:link, 
+header nav li a:visited{
+  font-family: 'futura-pt', sans-serif;
+  color: #6c757d;
+}
+
+
+header nav li a:hover, header nav li a:active{
+  transition: 2s;
+  color: #d11406 !important;
+}
 
 .info{
   margin: 40px auto;
@@ -84,6 +104,10 @@ q{
   box-shadow: 2px 10px 10px 2px rgba(57, 67, 70, 0.49);
 }
 
+.jaw-brand{
+  width: 70px;
+  height: 70px;
+}
 
 
 
