--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,36 +123,17 @@ q{
   background: rgba(0,0,0,0,);
 }
 
-.hover{
-  position: relative;
-  overflow: hidden;
-}
 
-.inner{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0,0,0,.5);
-  opacity: 0;
-  top: 0;
-  z-index: 10;
-  transition: all .3s ease;
-  -moz-transition: all .3s ease;
-  -webkit-transition: all .3s ease;
-  -o-transition: all .3s ease;
-  display: flex;
-}
-
-a:hover .inner,
-a:active .inner{
+.inner:hover,
+.inner:active{
   background-image:url(/assets/images/reflection-red.png);
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
 }
 
-a:hover .hover,
-a:hover .hover{
+a:hover .hover-img,
+a:hover .hover-img{
   opacity: 0;
   transition:all .6s ease-out;
 }
