--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,15 +78,28 @@ header nav li a:visited{
   color: #6c757d;
 }
 
+article a:link,
+article a:visited{
+  color: #d11406;
+  font-weight: 700;
+}
+
+article a:hover,
+article a:active{
+  transition: .5s;
+  font-size: 1.5rem;
+}
+
 
 header nav li a:hover, 
 header nav li a:active,
 footer li a:hover,
 footer li a:active{
-  transition: .8s;
+  transition: .5s;
   font-weight: 700;
   color: #d11406 !important;
 }
+
 
 .info{
   margin: 40px auto;
@@ -110,7 +123,8 @@ q{
 /*===ADDITIONAL===*/
 .database img,
 .programming img,
-.typography img{
+.typography img,
+.web-buffalo .wrap img{
   box-shadow: 2px 10px 10px 2px rgba(57, 67, 70, 0.49);
 }
 
@@ -122,6 +136,12 @@ q{
 .wrap{
   padding-top: 3.33rem;
 }
+
+
+.credits{
+  font-size: 1rem;
+}
+
 
 /*===INTRO PAGE===*/
 .about,
