--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,7 +124,7 @@ q{
 .database img,
 .programming img,
 .typography img,
-.web-buffalo .wrap img{
+.wrap img{
   box-shadow: 2px 10px 10px 2px rgba(57, 67, 70, 0.49);
 }
 
