--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,10 +7,12 @@ html {
   }
 
 
+
 img{
     width: 100%;
     height: auto;
 }
+
 
 .google-slides-container{
   position: relative;
@@ -79,7 +81,9 @@ header nav li a:visited{
 }
 
 article a:link,
-article a:visited{
+.intro a:link,
+article a:visited,
+.intro a:visited{
   color: #d11406;
   font-weight: 700;
 }
@@ -116,9 +120,18 @@ article{
   padding-bottom:3.3rem;
 }
 
+
+
 q{
   font-style: italic;
 }
+
+
+.jaw-brand{
+  width: 70px;
+  height: auto;
+}
+
 
 /*===ADDITIONAL===*/
 .database img,
@@ -128,10 +141,6 @@ q{
   box-shadow: 2px 10px 10px 2px rgba(57, 67, 70, 0.49);
 }
 
-.jaw-brand{
-  width: 70px;
-  height: auto;
-}
 
 .wrap{
   padding-top: 3.33rem;
@@ -162,9 +171,12 @@ q{
   opacity: 1;
 }
 
+
 .loader{
   text-align: center;
 }
+
+
 
 /*===INTRO PAGE===*/
 .about,
@@ -177,6 +189,16 @@ q{
   font-size: 3rem;
 }
 
+.intro p{
+  font-size: 1.5rem;
+}
+
+
+.intro section a:hover,
+.intro section a:active{
+  transition: .5s;
+  font-size: 2rem;
+}
 
 
 /*===PROJECTS===*/
