--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,7 @@ header nav ul li{
 
 header nav li a:link, 
 header nav li a:visited{
-  color: #6c757d;
+  color: #6c757d !important;
 }
 
 article a:link,
@@ -88,11 +88,14 @@ article a:visited,
   font-weight: 700;
 }
 
+
+
 article a:hover,
 article a:active{
   transition: .5s;
   font-size: 1.5rem;
 }
+
 
 
 header nav li a:hover, 
@@ -152,6 +155,11 @@ q{
 }
 
 
+footer li{
+  letter-spacing: 0.125rem;
+  font-weight: 300 !important;
+}
+
 .fade-in-image { animation: fadeIn 4s; }
 
 @keyframes fadeIn {
@@ -200,6 +208,10 @@ q{
   font-size: 2rem;
 }
 
+
+.intro dl{
+  margin: 30px 0;
+}
 
 /*===PROJECTS===*/
 .inner img {
