--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -248,24 +248,19 @@ svg:hover{
 
 /*===RELECTION PAGE===*/
 
-.reflect{
-  padding: 3.3rem;
-}
 
-.reflection dl{
-  padding-top: 2rem;
+.msg{
+  padding: 3.33rem 0;
  }
 
 
-.reflection dd{
-  padding-bottom: 2rem;
-}
+
 
 
 
 .reflection .growth dt{
   font-family: 'La Belle Aurore', cursive;
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 .reflection .wrap p{
@@ -275,7 +270,7 @@ svg:hover{
 
 
 .growth h2{
-  font-size: 5rem;
+  font-size: 4.5rem;
 }
 
 .embed-responsive {
