--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,13 @@ q{
 }
 
 
-.fade-in-image { animation: fadeIn 4s; }
+.fade-in-image { 
+  animation: fadeIn 4s; 
+  -webkit-animation: fadeIn 5s;
+  -moz-animation: fadeIn 5s;
+  -o-animation: fadeIn 5s;
+  -ms-animation: fadeIn 5s;
+}
 
 @keyframes fadeIn {
   0% { opacity: 0; }
