--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 
 html {
+  position: relative;
+  min-height: 100%;
     box-sizing: border-box;
   }
   *, *:before, *:after {
@@ -136,6 +138,21 @@ q{
 }
 
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+}
+
+.footer .my-4{
+  margin-bottom: 0 !important;
+}
+
+.footer .py-3{
+  padding-top: 0 !important;
+}
 /*===ADDITIONAL===*/
 .database img,
 .programming img,
