--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -235,6 +235,13 @@ q{
 
 
 
+.munch .col-md-8 p,
+.campus-safety .col-md-8 p{
+font-size: 3rem;
+text-align: center;
+}
+
+
 /*===INTRO PAGE===*/
 .about,
 .about-skills{
