--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,24 @@ q{
 }
 
 
+@-webkit-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+
+@-moz-keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+} 
+
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+
 .box{
   -webkit-transition: opacity 3s;
   -moz-transition: opacity 3s;
