--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,23 +221,21 @@ text-align: center;
 /*===Scroll-Trigger===*/
 
 .box{
-  -webkit-transition: opacity 3s;
+  -webkit-transition-property: opacity;
+  -webkit-transition-duration: 2s;
   -moz-transition: opacity 3s;
   -o-transition: opacity 3s;
   -ms-transition: opacity 3s;
   transition: opacity 3s;
-}
-
-
-.box{
   opacity: 0;
-  -webkit-transition: opacity 0;
 }
+
 
 
 .box.active{
+  -webkit-transition-property: opacity;
+  -webkit-transition-duration: 2s;
   opacity: 1;
-  -webkit-transition: opacity 1;
 }
 
 
