--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,31 +218,6 @@ text-align: center;
 }
 
 
-/*===Scroll-Trigger===*/
-
-.box{
-  -webkit-transition-property: opacity;
-  -webkit-transition-duration: 3s;
-  -moz-transition: opacity 3s;
-  -o-transition: opacity 3s;
-  -ms-transition: opacity 3s;
-  transition: opacity 3s;
-  opacity: 0;
-}
-
-
-
-.box.active{
-  -webkit-transition-property: opacity;
-  -webkit-transition-duration: 2s;
-  opacity: 1;
-}
-
-
-.loader{
-  text-align: center;
-}
-
 
 
 
@@ -381,3 +356,31 @@ svg:hover{
   height: 100%;
 }
 
+
+/*==Media Queries*/
+
+@media (min-width: 400px) {
+  /*===Scroll-Trigger===*/
+
+.box{
+  -webkit-transition: opacity 3s;
+  -moz-transition: opacity 3s;
+  -o-transition: opacity 3s;
+  -ms-transition: opacity 3s;
+  transition: opacity 3s;
+  opacity: 0;
+}
+
+
+
+.box.active{
+  opacity: 1;
+}
+
+
+.loader{
+  text-align: center;
+}
+
+
+}
