--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,7 +165,9 @@ q{
 .database img,
 .programming img,
 .typography img,
-.wrap img{
+.wrap img,
+.munch .feature img,
+.feedback{
   box-shadow: 2px 10px 10px 2px rgba(57, 67, 70, 0.49);
 }
 
@@ -183,14 +185,16 @@ q{
 }
 
 
+.feedback{
+  width: 70%;
+  margin-top: 3rem;
+}
 
 
-
-
-.mobile{
+.munch .mobile{
   display: block;
   width: 70%;
-  margin: 0 auto;
+  margin: 1rem auto;
 }
 
 
@@ -415,12 +419,21 @@ svg:hover{
     padding: 0;
     width: 100% !important;
   }
-  
+
 }
 
 
 
+
 @media (min-width: 960px){
+  .growth h2{
+    font-size: 5rem;
+  }
+  
+}
+
+
+@media (min-width: 992px){
   .mobile{
     display: block;
     float: right;
@@ -428,10 +441,5 @@ svg:hover{
     width: 60%;
     margin: 0 auto;
   }
-  
-  .growth h2{
-    font-size: 5rem;
-  }
-  
+ 
 }
-
