--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,8 @@ q{
 .typography img,
 .wrap img,
 .munch .feature img,
-.feedback{
+.feedback,
+.campus-safety .feature img{
   box-shadow: 2px 10px 10px 2px rgba(57, 67, 70, 0.49);
 }
 
