--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,7 +171,8 @@ q{
 .wrap img,
 .munch .feature img,
 .feedback,
-.campus-safety .feature img{
+.campus-safety .feature img,
+.shadow{
   box-shadow: 2px 10px 10px 2px rgba(57, 67, 70, 0.49);
 }
 
