--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,7 @@ a{
 }
 
 li:not(.exempt){
-  list-style: none !important;
+  list-style: none;
 }
 
 ul{
@@ -171,8 +171,7 @@ q{
 .wrap img,
 .munch .feature img,
 .feedback,
-.campus-safety .feature img,
-.shadow{
+.campus-safety .feature img{
   box-shadow: 2px 10px 10px 2px rgba(57, 67, 70, 0.49);
 }
 
