--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,11 @@ q{
 }
 
 
+.article-2-triumph{
+padding-top:0;
+}
+
+
 /*===Feature Fades===*/
 .fade-in-image { 
   -webkit-animation: fadeIn 5s;
